--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -10,11 +10,8 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-ins
     locales \
     && rm -rf /var/lib/apt/lists/*
 
-RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
-    locale-gen
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US:en
-ENV LC_ALL en_US.UTF-8
+RUN locale-gen en_US en_US.UTF-8 && update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
+ENV LANG=en_US.UTF-8
 
 # Install required packages
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
@@ -38,10 +35,10 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-ins
 # Setup ROS1 repositories
 RUN sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list' && \
     curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add -
-{%- elif ros_distro in ["foxy", "galactic", "humble", "iron"] -%}
+{%- elif ros_distro in ["foxy", "humble", "jazzy"] -%}
 # Setup ROS2 repositories
 RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg && \
-    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null
+echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null
 {%- endif %}
 
 # Install ROS {{ ros_distro }}
@@ -52,9 +49,11 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-ins
     python3-rosinstall \
     python3-rosinstall-generator \
     python3-wstool \
-    {%- else -%}
+    {%- endif %}
+    {% if ros_distro in ["foxy", "humble", "jazzy"] -%}
+    ros-dev-tools \
     python3-colcon-common-extensions \
-    python3-rosdep \
+    python3-argcomplete \
     {%- endif %}
     && rm -rf /var/lib/apt/lists/*
 
@@ -71,8 +70,6 @@ RUN groupadd --gid ${HOST_GID} {{ ros_distro }} && \
 USER {{ ros_distro }}
 
 # Source ROS environment
-{% if ros_distro in ["noetic"] -%}
 RUN echo "source /opt/ros/{{ ros_distro }}/setup.bash" >> ~/.bashrc
-{%- endif %}
 
 CMD ["bash"]
